# testpypi_lipsum

./: CHANGELOG.md  README.md  pyproject.toml
src/testpypi_lipsum/: __init__.py  lipsum.py
tests/: install.sh  test1.py  uninstall.sh
