[project]
name = "testpypi_lipsum"
version = "0.0.2"
authors = [
    { name = "Samarthya Lykamanuella", email = "93555329+groaking@users.noreply.github.com" },
]
description = "A Hello World package that prints out the good ol' Lorem Ipsum"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/groaking/testpypi_lipsum"
Issues = "https://github.com/groaking/testpypi_lipsum/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
